@@ -1,0 +1,9 @@
+Title: Improved error handling when trying to edit not existant rules
+Level: 1
+Component: wato
+Compatible: compat
+Version: 1.2.8p15
+Date: 1480944530
+Class: fix
+
+
